Fix:blocking and spacing issues Working version

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ label {
 
 .title-projects {
   width: 100%;
-  height: 100px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -143,7 +143,7 @@ label {
 
 .project-wrapper {
   width: fit-content;
-  height: 100%;
+  height: fit-content;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -166,8 +166,8 @@ label {
 }
 
 .project-area {
-  min-height: 500px;
   width: 100%;
+  height: fit-content !important;
   display: flex;
   gap: 1rem;
   flex-direction: row;
