--- a/sass/components/_project_section.scss
+++ b/sass/components/_project_section.scss
@@ -1,6 +1,6 @@
 .title-projects {
     width: 100%;
-    height: 100px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,7 +10,7 @@
 }
 .project-wrapper{
   width: fit-content;
-  height: 100%;
+  height: fit-content;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -32,8 +32,8 @@
   gap: 2rem;
 }
 .project-area {
-    min-height: 500px;
     width: 100%;
+    height: fit-content !important;
     display: flex;
     gap: 1rem;
     flex-direction: row;
